--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<body>
+<body class="mx-5 my-2.5">
 	<header class="container">
-	<h1><a href="{{site.url}}">{{site.title}}</a></h1>
-	<h2>{{site.description}}</h2>
+	<h1 class="text-2xl"><a href="{{site.url}}" class="text-sky-500">{{site.title}}</a></h1>
+	<h2 class="xl">{{site.description}}</h2>
 	</header>
