--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,7 +2,7 @@
 		<meta charset="UTF-8">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
 		<meta name="author" content="mnafisalmukhdi1">
-		<title>{{page.title}}</title>
+		<title>{{page.title}} | {{site.title}}</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="all">
 		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
