--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,7 @@
 <html>
 	{% include head.html %}
 	{% include header.html %}
-	<main class="container mx-5">
+	<main class="container my-5">
 	{{content}}
 	</main>
 	{% include footer.html %}
