--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="container">
-<h6>&copy; <span id="year"></span> <a href="{{site.url}}">{{site.title}}</a></h6>
+<footer class="container text-center">
+<h6 class="text-gray-700">&copy; <span id="year"></span> <a href="{{site.url}}">{{site.title}}</a></h6>
 </footer>
 <script type="text/javascript">
 const d = new Date();
