--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
-<h1>{{post.title}}</h1>
-<h2>Posted by {{post.author}} on {{post.date}}</h2>
+<h1>{{page.title}}</h1>
+<h2>Posted by {{page.author}} on {{page.date}}</h2>
 <div class="container">
-{{post.content}}
+{{content}}
 </div>
