--- a/_includes/head.html
+++ b/_includes/head.html
@@ -5,6 +5,6 @@
 		<title>{{page.title}} | {{site.title}}</title>
 		<script src="https://cdn.tailwindcss.com"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="all">
-		<link rel="shortcut icon" href="/favicon.ico" type="image/x-icon">
-		<link rel="icon" href="/favicon.ico" type="image/x-icon">
+		<link rel="shortcut icon" href="https://nafis1.my.id/favicon.ico" type="image/x-icon">
+		<link rel="icon" href="htps://nafis1.my.id/favicon.ico" type="image/x-icon">
 </head>
