--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -2,7 +2,7 @@
 layout: default
 ---
 <h1 class="text-xl">{{page.title}}</h1>
-<h2 class="text-lg">Posted by {{page.author}} on {{page.date | date: "%D, %d %B %Y}}</h2>
+<h2 class="text-lg">Posted by {{page.author}} on {{page.date | date: "%D, %d %B %Y"}}</h2>
 <div class="container my-5">
 {{content}}
 </div>
