--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
-<body class="mx-5 my-2.5">
+<body class="mx-10 my-5">
 	<header class="container">
-	<h1 class="text-2xl"><a href="{{site.url}}" class="text-sky-500">{{site.title}}</a></h1>
-	<h2 class="xl">{{site.description}}</h2>
+	<h1 class="text-4xl"><a href="{{site.url}}" class="text-sky-500">{{site.title}}</a></h1>
+	<h2 class="text-2xl">{{site.description}}</h2>
 	</header>
