--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="container text-center">
-<h5><script type="text/javascript" href="https://www.freevisitorcounters.com/en/home/counter/933111/t/2"></script></h5>
+<h5><img src="https://www.freevisitorcounters.com/en/counter/render/933111/t/2" style="border:0;"></h5>
 <h6 class="text-gray-700">&copy; <span id="year"></span> <a href="{{site.url}}" class="text-blue-500">{{site.title}}</a></h6>
 </footer>
 <script type="text/javascript">
