--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,6 @@
 <footer class="container text-center">
-<h6 class="text-gray-700">&copy; <span id="year"></span> <a href="{{site.url}}" class="text-blue-500">{{site.title}}</a></h6>
+  <a href="https://nafis1.my.id/donate.html" target="_blank" class="bg-sky-500 p-auto rounded-full">Donate</a>
+  <h6 class="block text-gray-700">&copy; <span id="year"></span> <a href="{{site.url}}" class="text-blue-500">{{site.title}}</a></h6>
 </footer>
 <script type="text/javascript">
 const d = new Date();
