--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<header class="container">
 	<h1 class="text-4xl"><a href="{{site.url}}" class="text-sky-500">{{site.title}}</a></h1>
 	<h2 class="text-2xl">{{site.description}}</h2>
-	<nav class="text-xl">
+	<nav class="text-xl space-x-4">
 		<a href="https://nafis1.my.id" class="text-sky-500 my-2" target="_blank">Home</a>
 		<a href="https://nafis1.my.id/about.html" class="text-sky-500 my-2" target="_blank">About</a>
 		<a href="https://nafis1.my.id/works/" class="text-sky-500 my-2" target="_blank">Works</a>
