--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
 <footer class="container text-center">
-	<div class="block place-content-center place-items-center place-self-center text-center"><a href="https://www.hitwebcounter.com" target="_blank"><img src="https://hitwebcounter.com/counter/counter.php?page=7992964&style=0006&nbdigits=1&type=page&initCount=0" title="Free Counter" Alt="web counter" border="0" /></a></div>
+	<div class="flex justify-center"><a href="https://www.hitwebcounter.com" target="_blank"><img src="https://hitwebcounter.com/counter/counter.php?page=7992964&style=0006&nbdigits=1&type=page&initCount=0" title="Free Counter" Alt="web counter" border="0" /></a></div>
 	<h6 class="block text-gray-700">&copy; <span id="year"></span> <a href="{{site.url}}" class="text-blue-500">{{site.title}}</a></h6>
 </footer>
 <script type="text/javascript">
