--- a/_includes/head.html
+++ b/_includes/head.html
@@ -4,6 +4,7 @@
 		<meta name="author" content="mnafisalmukhdi1">
 		<title>{{page.title}} | {{site.title}}</title>
 		<script src="https://cdn.tailwindcss.com"></script>
+	<script src="http://blog.nafis1.my.id/tailwind.config.js"></script>
 		<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="all">
 		<link rel="shortcut icon" href="https://nafis1.my.id/favicon.ico" type="image/x-icon">
 		<link rel="icon" href="https://nafis1.my.id/favicon.ico" type="image/x-icon">
