--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -1,8 +1,8 @@
 ---
 layout: default
 ---
+<article class="prose">
 <h1 class="text-xl">{{page.title}}</h1>
 <h2 class="text-lg">Posted by {{page.author}} on {{page.date | date: "%A, %d %B %Y"}}</h2>
-<div class="container my-5">
 {{content}}
-</div>
+</article>
