--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,5 +4,16 @@ layout: default
 <article class="prose">
 <h1 class="text-xl">{{page.title}}</h1>
 <h2 class="text-lg">Posted by {{page.author}} on {{page.date | date: "%A, %d %B %Y"}}</h2>
+<div class="post-categories">
+  {% if post %}
+    {% assign categories = post.categories %}
+  {% else %}
+    {% assign categories = page.categories %}
+  {% endif %}
+  {% for category in categories %}
+  <a href="{{site.baseurl}}/categories/#{{category|slugize}}">{{category}}</a>
+  {% unless forloop.last %}&nbsp;{% endunless %}
+  {% endfor %}
+</div>
 {{content}}
 </article>
