--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,11 +1,15 @@
 <body class="mx-10 my-5">
 	<header class="container">
-	<h1 class="text-4xl"><a href="{{site.url}}" class="text-sky-500">{{site.title}}</a></h1>
-	<h2 class="text-2xl">{{site.description}}</h2>
-	<nav class="text-xl space-x-4">
-		<a href="https://nafis1.my.id" class="text-sky-500 my-2" target="_blank">Home</a>
-		<a href="https://nafis1.my.id/about.html" class="text-sky-500 my-2" target="_blank">About</a>
-		<a href="https://nafis1.my.id/works/" class="text-sky-500 my-2" target="_blank">Works</a>
-		<a href="https://nafis1.my.id/donate.html" class="text-sky-500 my-2" target="_blank">Donate</a>
+		<h1 class="text-4xl text-center my-auto">M. Nafis Al-Mukhdi</h1>
+		<h2 class="text-lg text-center">@mnafisalmukhdi1</h2>
+		<h3 class="text-2xl text-center">Blog</h3>
+	</header>
+	<nav class="text-xl text-center my-1">
+		<a href="https://nafis1.my.id"><span class="material-icons">home</span></a>
+		<a href="https://nafis1.my.id/about.html"><span class="material-icons">person</span></a>
+		<a href="https://pddikti.kemdikbud.go.id/data_mahasiswa/RDlFM0I5QjgtMjA3Ri00NDcxLUFGREEtMjkwMTYwNTcyRjJD" target="_blank"><span class="material-icons">school</span></a>
+		<a href="https://blog.nafis1.my.id"><span class="material-icons">rss_feed</span></a>
+		<a href="https://nafis1.my.id/works/index.html"><span class="material-icons">book</span></a>
+		<a href="https://nafis1.my.id/donate.html"><span class="material-icons">attach_money</span></a>
 	</nav>
 	</header>
