--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,4 @@
-<body class="mx-10 my-5">
+<body class="mx-10 my-5 bg-slate-300">
 	<header class="container">
 		<h1 class="text-4xl text-center my-auto">M. Nafis Al-Mukhdi</h1>
 		<h2 class="text-lg text-center">@mnafisalmukhdi1</h2>
