--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,7 @@
 	<header class="container">
 		<h1 class="text-4xl text-center my-auto">M. Nafis Al-Mukhdi</h1>
 		<h2 class="text-lg text-center">@mnafisalmukhdi1</h2>
-		<h3 class="text-2xl text-center">Blog</h3>
+		<h3 class="text-2xl text-center"><a href="https://blog.nafis1.my.id" class="underline">Blog</a></h3>
 	</header>
 	<nav class="text-xl text-center my-1">
 		<a href="https://nafis1.my.id"><span class="material-icons">home</span></a>
