--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,10 +1,10 @@
-<body class="mx-10 my-5 bg-slate-300">
-	<header class="container">
-		<h1 class="text-4xl text-center my-auto">M. Nafis Al-Mukhdi</h1>
-		<h2 class="text-lg text-center">@mnafisalmukhdi1</h2>
-		<h3 class="text-2xl text-center"><a href="https://blog.nafis1.my.id" class="underline">Blog</a></h3>
+<body class="bg-slate-300">
+	<header class="mt-20">
+		<h1 class="text-3xl text-center my-auto">M. Nafis Al-Mukhdi</h1>
+		<h2 class="text-center">@mnafisalmukhdi1</h2>
+		<h3 class="text-lg text-center"><a href="https://blog.nafis1.my.id" class="underline">Blog</a></h3>
 	</header>
-	<nav class="text-xl text-center my-1">
+	<nav class="text-center my-1">
 		<a href="https://nafis1.my.id"><span class="material-icons">home</span></a>
 		<a href="https://nafis1.my.id/about.html"><span class="material-icons">person</span></a>
 		<a href="https://pddikti.kemdikbud.go.id/data_mahasiswa/RDlFM0I5QjgtMjA3Ri00NDcxLUFGREEtMjkwMTYwNTcyRjJD" target="_blank"><span class="material-icons">school</span></a>
