--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -1,7 +1,8 @@
-<html lang="id">
+<!DOCTYPE html>
+<html>
 	{% include head.html %}
 	{% include header.html %}
-	<main class="container my-5">
+	<main class="my-5">
 	{{content}}
 	</main>
 	{% include footer.html %}
