--- a/_includes/head.html
+++ b/_includes/head.html
@@ -9,5 +9,5 @@
 	<link rel="shortcut icon" href="https://nafis1.my.id/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="https://nafis1.my.id/favicon.ico" type="image/x-icon">
 	<link rel="canonical" href="https://blog.nafis1.my.id">
-	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ "{{ site.url }}/feed.xml" | absolute_url }}" />
+	<link rel="alternate" type="application/rss+xml" title="{{ site.title }}" href="{{ site.url }}/feed.xml">
 </head>
