--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,8 +1,8 @@
 <body class="bg-slate-300">
-	<header class="mt-20">
+	<header>
+		<div class="text-center"><img src="https://nafis1.my.id/cdn/nafis-2022-q4.jpg" alt="" class="w-32 rounded-full mx-auto shadow-lg"/></a>
 		<h1 class="text-3xl text-center my-auto">M. Nafis Al-Mukhdi</h1>
 		<h2 class="text-center">@mnafisalmukhdi1</h2>
-		<h3 class="text-lg text-center"><a href="https://blog.nafis1.my.id" class="underline">Blog</a></h3>
 	</header>
 	<nav class="text-center my-1">
 		<a href="https://nafis1.my.id"><span class="material-icons">home</span></a>
@@ -12,4 +12,5 @@
 		<a href="https://nafis1.my.id/works/index.html"><span class="material-icons">book</span></a>
 		<a href="https://nafis1.my.id/donate.html"><span class="material-icons">attach_money</span></a>
 	</nav>
+	<h3 class="text-lg text-center"><a href="https://blog.nafis1.my.id" class="underline">Blog</a></h3>
 	</header>
