--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,5 @@
 <footer class="text-center">
 	<div class="flex justify-center"><div><a href="https://www.hitwebcounter.com" target="_blank"><img src="https://hitwebcounter.com/counter/counter.php?page=7992964&style=0006&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter" border="0" /></a></div></div>
-	<h6 class="block text-gray-700">&copy; <span id="year"></span> <a href="{{site.url}}" class="text-blue-500">{{site.title}}</a></h6>
+	<h6 class="block text-gray-700">&copy; {{site.time|%Y}} <a href="{{site.url}}" class="underline">{{site.title}}</a></h6>
 </footer>
-<script type="text/javascript">
-const d = new Date();
-let year = d.getUTCFullYear();
-document.getElementById("year").innerHTML = year;
-</script>
 </body>
