--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,6 +1,6 @@
 <body class="bg-slate-300">
 	<header>
-		<div class="text-center"><img src="https://nafis1.my.id/cdn/nafis-2022-q4.jpg" alt="" class="w-32 rounded-full mx-auto shadow-lg"/></a>
+		<div class="text-center"><img src="https://nafis1.my.id/cdn/nafis-20234.jpg" alt="" class="w-32 rounded-full mx-auto shadow-lg"/></a>
 		<h1 class="text-3xl text-center my-auto">M. Nafis Al-Mukhdi</h1>
 		<h2 class="text-center">@mnafisalmukhdi1</h2>
 	</header>
@@ -9,6 +9,8 @@
 		<a href="https://nafis1.my.id/about.html"><span class="material-icons">person</span></a>
 		<a href="https://pddikti.kemdikbud.go.id/data_mahasiswa/RDlFM0I5QjgtMjA3Ri00NDcxLUFGREEtMjkwMTYwNTcyRjJD" target="_blank"><span class="material-icons">school</span></a>
 		<a href="https://blog.nafis1.my.id"><span class="material-icons">rss_feed</span></a>
+		<a href="https://nafis1.my.id/works/index.html"><span class="material-icons">book</span></a>
+		<a href="https://story.nafis1.my.id"><span class="material-icons">library_books</span></a>
 		<a href="https://nafis1.my.id/works/index.html"><span class="material-icons">book</span></a>
 		<a href="https://nafis1.my.id/donate.html"><span class="material-icons">attach_money</span></a>
 	</nav>
