--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,5 +1,5 @@
-<footer class="text-center">
-	<div class="flex justify-center"><div><a href="https://www.hitwebcounter.com" target="_blank"><img src="https://hitwebcounter.com/counter/counter.php?page=7992964&style=0006&nbdigits=5&type=page&initCount=0" title="Free Counter" Alt="web counter" border="0" /></a></div></div>
-	<h6 class="block text-gray-700">&copy; {{site.time|date:'%Y'}} <a href="{{site.url}}" class="underline">{{site.title}}</a></h6>
+<footer class="container mx-auto bg-gray-200 dark:bg-slate-800">
+	<div class="flex justify-center"><script type="text/javascript" src="https://cdn.trakteer.id/js/embed/trbtn.min.js?date=18-11-2023"></script><script type="text/javascript">(function(){var trbtnId=trbtn.init('Dukung Saya di Trakteer','#be1e2d','https://trakteer.id/mnafisalmukhdi1','https://cdn.trakteer.id/images/embed/trbtn-icon.png?date=18-11-2023','40');trbtn.draw(trbtnId);})();</script></div>
+	<h6 class="text-center dark:text-white">&copy; {{site.time|date:'%Y'}} <a href="{{site.url}}" class="underline">{{site.title}}</a></h6>
 </footer>
 </body>
