--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,17 +1,4 @@
-<body class="bg-slate-300">
-	<header>
-		<div class="text-center"><img src="https://nafis1.my.id/cdn/nafis-20234.jpg" alt="" class="w-32 rounded-full mx-auto shadow-lg"/></a>
-		<h1 class="text-3xl text-center my-auto">M. Nafis Al-Mukhdi</h1>
-		<h2 class="text-center">@mnafisalmukhdi1</h2>
-	</header>
-	<nav class="text-center my-1">
-		<a href="https://nafis1.my.id"><span class="material-icons">home</span></a>
-		<a href="https://nafis1.my.id/about.html"><span class="material-icons">person</span></a>
-		<a href="https://pddikti.kemdikbud.go.id/data_mahasiswa/RDlFM0I5QjgtMjA3Ri00NDcxLUFGREEtMjkwMTYwNTcyRjJD" target="_blank"><span class="material-icons">school</span></a>
-		<a href="https://blog.nafis1.my.id"><span class="material-icons">rss_feed</span></a>
-		<a href="https://nafis1.my.id/works/index.html"><span class="material-icons">book</span></a>
-		<a href="https://story.nafis1.my.id"><span class="material-icons">library_books</span></a>
-		<a href="https://nafis1.my.id/donate.html"><span class="material-icons">attach_money</span></a>
-	</nav>
-	<h3 class="text-lg text-center"><a href="https://blog.nafis1.my.id" class="underline">Blog</a></h3>
+<body class="dark:bg-slate-900">
+	<header class="container mx-auto bg-gray-200 dark:bg-slate-800 py-5">
+		<h1 class="text-3xl text-center"><a href="/" class="underline dark:text-white">{{site.title}}</a></h1>
 	</header>
