--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -30,7 +30,7 @@ comments: true
     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
     
     var disqus_config = function () {
-    this.page.url = {{page.url}};
+    this.page.url = {{site.url}}{{page.url}};
     };
     
     (function() { // DON'T EDIT BELOW THIS LINE
