--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,8 +1,6 @@
 <footer class="container mx-auto bg-gray-200 dark:bg-slate-800">
 	<div class="flex justify-center">
-		<!-- Start of CuterCounter Code -->
-		<a href="https://www.cutercounter.com/" target="_blank"><img src="https://www.cutercounter.com/hits.php?id=hrxpqxdf&nd=6&style=71" border="0" alt="blog counter"></a>
-		<!-- End of CuterCounter Code -->
+		<a href="https://smallcounter.com"><img src="https://smallcounter.com/count.php?c_style=3&id=1732826205" border=0 alt="web counter"></a>
 		<!--<script type="text/javascript" src="https://cdn.trakteer.id/js/embed/trbtn.min.js?date=18-11-2023"></script><script type="text/javascript">(function(){var trbtnId=trbtn.init('Dukung Saya di Trakteer','#be1e2d','https://trakteer.id/mnafisalmukhdi1','https://cdn.trakteer.id/images/embed/trbtn-icon.png?date=18-11-2023','40');trbtn.draw(trbtnId);})();</script>-->
 	</div>
 	<h6 class="text-center dark:text-white">&copy; {{site.time|date:'%Y'}} <a href="{{site.url}}" class="underline">{{site.title}}</a></h6>
