--- a/_includes/head.html
+++ b/_includes/head.html
@@ -2,6 +2,19 @@
 	<meta charset="UTF-8">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<meta name="author" content="mnafisalmukhdi1">
+	<!-- Facebook Meta Tags -->
+	<meta property="og:url" content="{{ site.url }}">
+	<meta property="og:type" content="website">
+	<meta property="og:title" content="{{page.title}} | {{site.title}}">
+	<meta property="og:description" content="">
+	<meta property="og:image" content="">
+	<!-- Twitter Meta Tags -->
+	<meta name="twitter:card" content="summary_large_image">
+	<meta property="twitter:domain" content="blog.nafis1.my.id">
+	<meta property="twitter:url" content="{{site.url}}">
+	<meta name="twitter:title" content="{{page.title}} | {{site.title}}">
+	<meta name="twitter:description" content="">
+	<meta name="twitter:image" content="">
 	<title>{{page.title}} | {{site.title}}</title>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<link rel="stylesheet" href="style.css">
