--- a/_includes/head.html
+++ b/_includes/head.html
@@ -7,14 +7,14 @@
 	<meta property="og:type" content="website">
 	<meta property="og:title" content="{{page.title}} | {{site.title}}">
 	<meta property="og:description" content="">
-	<meta property="og:image" content="">
+	<meta property="og:image" content="https://image.thum.io/get/maxAge/12/width/700/https://blog.nafis1.my.id">
 	<!-- Twitter Meta Tags -->
 	<meta name="twitter:card" content="summary_large_image">
 	<meta property="twitter:domain" content="blog.nafis1.my.id">
 	<meta property="twitter:url" content="{{site.url}}">
 	<meta name="twitter:title" content="{{page.title}} | {{site.title}}">
 	<meta name="twitter:description" content="">
-	<meta name="twitter:image" content="">
+	<meta name="twitter:image" content="https://image.thum.io/get/maxAge/12/width/700/https://blog.nafis1.my.id">
 	<title>{{page.title}} | {{site.title}}</title>
 	<script src="https://cdn.tailwindcss.com"></script>
 	<link rel="stylesheet" href="style.css">
