--- a/style.css
+++ b/style.css
@@ -1,3 +1,13 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@import url('https://fonts.googleapis.com/css2?family=Amiri&display=swap');
+
+@layer utilities {
+  .arab {
+    font-family: 'Amiri', serif;
+    direction: rtl;       /* not text-direction */
+    text-align: right;    /* optional */
+  }
+}
