--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -18,7 +18,7 @@ comments: true
     {% endfor %}
     </div>
   </div>
-  <div class="space-y-2 dark:text-white">
+  <div class="prose space-y-2 dark:text-white">
     {{content}}
   </div>
 </article>
@@ -29,12 +29,10 @@ comments: true
     /**
     *  RECOMMENDED CONFIGURATION VARIABLES: EDIT AND UNCOMMENT THE SECTION BELOW TO INSERT DYNAMIC VALUES FROM YOUR PLATFORM OR CMS.
     *  LEARN WHY DEFINING THESE VARIABLES IS IMPORTANT: https://disqus.com/admin/universalcode/#configuration-variables    */
-    /*
     var disqus_config = function () {
-    this.page.url = PAGE_URL;  // Replace PAGE_URL with your page's canonical URL variable
-    this.page.identifier = PAGE_IDENTIFIER; // Replace PAGE_IDENTIFIER with your page's unique identifier variable
+      this.page.url = 'https://blog.nafis1.my.id{{ page.url }}';
+      this.page.identifier = '{{ page.slug | default: page.url | slugify }}';
     };
-    */
     (function() { // DON'T EDIT BELOW THIS LINE
     var d = document, s = d.createElement('script');
     s.src = 'https://blog-nafis.disqus.com/embed.js';
