--- a/style.css
+++ b/style.css
@@ -13,15 +13,15 @@
 }
 
 @layer base {
-  /* h1 {
+  .prose h1 {
     @apply text-4xl font-bold tracking-tight text-gray-900;
   }
-  h2 {
+  .prose h2 {
     @apply text-3xl font-semibold mt-6 mb-4 text-gray-800;
   }
-  h3 {
+  .prose h3 {
     @apply text-2xl font-medium mt-4 mb-2 text-gray-700;
-  } */
+  }
   .prose blockquote {
     @apply border-l-4 border-indigo-500 pl-4 italic text-gray-700 bg-indigo-50 rounded-md my-4;
   }
