--- a/_includes/head.html
+++ b/_includes/head.html
@@ -17,7 +17,7 @@
 	<meta name="twitter:image" content="https://image.thum.io/get/maxAge/12/width/700/https://blog.nafis1.my.id">
 	<title>{{page.title}} | {{site.title}}</title>
 	<script src="https://cdn.tailwindcss.com"></script>
-	<link rel="stylesheet" href="styles.css">
+	<link rel="stylesheet" href="style.css">
 	<link rel="stylesheet" href="https://fonts.googleapis.com/icon?family=Material+Icons" media="all">
 	<link rel="shortcut icon" href="https://nafis1.my.id/favicon.ico" type="image/x-icon">
 	<link rel="icon" href="https://nafis1.my.id/favicon.ico" type="image/x-icon">
