--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -4,8 +4,8 @@ comments: true
 ---
 <article>
   <div class="mb-12">
-    <h1 class="text-xl dark:text-white">{{page.title}}</h1>
-    <h2 class="text-lg dark:text-white">Posted by {{page.author}} on {{page.date | date: "%A, %d %B %Y"}}</h2>
+    <h1 class="text-3xl dark:text-white">{{page.title}}</h1>
+    <h2 class="text-2xl dark:text-white">Posted by {{page.author}} on {{page.date | date: "%A, %d %B %Y"}}</h2>
     <div class="post-categories">
     {% if post %}
       {% assign categories = post.categories %}
