--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -22,7 +22,7 @@ comments: true
     {{content}}
   </div>
 </article>
-<section>
+<section class="mt-12">
   <hr>
   <div id="disqus_thread"></div>
 <script>
