--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -13,7 +13,7 @@ comments: true
     {% assign categories = page.categories %}
   {% endif %}
   {% for category in categories %}
-    <a href="{{ site.baseurl }}/categories/#{{ category | slugify }}" class="underline">
+    <a href="{{ site.baseurl }}/categories/#{{ category | slugify }}" class="underline dark:text-white">
       {{ category }}
     </a>
   {% endfor %}
