--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,4 +1,6 @@
 <body class="dark:bg-slate-900">
-	<header class="container mx-auto bg-gray-200 dark:bg-slate-800 py-5">
-		<h1 class="text-4xl text-center"><a href="/" class="underline dark:text-white">{{site.title}}</a></h1>
+	<header class="w-full bg-gray-200 dark:bg-slate-800">
+		<div class="container mx-auto py-5 px-4">
+			<h1 class="text-4xl text-center"><a href="/" class="underline dark:text-white">{{site.title}}</a></h1>
+		</div>
 	</header>
