--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -2,7 +2,7 @@
 <html>
 	{% include head.html %}
 	{% include header.html %}
-	<main class="mx-10 my-5">
+	<main class="container mx-auto my-5 px-4">
 	{{content}}
 	</main>
 	{% include footer.html %}
