--- a/_layouts/post.html
+++ b/_layouts/post.html
@@ -25,7 +25,7 @@ comments: true
   </div>
 </article>
 <section class="mt-12">
-  <hr>
+  <hr class="mb-6">
   <div id="disqus_thread"></div>
 <script>
     /**
